Fixing Spacing

--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,11 @@ img.grayscale:hover {
 @media only screen and (max-width : 400px){
 
   #learningTo{
-    margin-top: -100px;
+    margin-top: -120px;
+  }
+
+  #heading{
+    margin-top: -75px;
   }
 
 }
